# perfect-ascii

./: .gitignore  CLAUDE.md  README.md  SKILL.md  pyproject.toml  server.py
.swarmy/results/: i0-c-baseline.txt  i1-c1.txt  i2-c1.txt  i3-c1.txt
bench/: eval-guide.md  render.html  scenarios-v2.md  scenarios.md
