[project]
name = "perfect-ascii"
version = "1.0.0"
description = "MCP server for rendering perfectly aligned ASCII diagrams"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["mcp>=1.2.0"]

[project.scripts]
perfect-ascii = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py", "bin"]
